# qt-svelte-dashboard

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  agents.md  roadmap.md
backend/: CMakeLists.txt  bridge.cpp  bridge.h  main.cpp  pdfscheme.cpp  pdfscheme.h  resources.qrc  server.h
cmake/: CopyFrontend.cmake
frontend/: .eslintrc-components.json  components.d.ts  components.json  eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/public/: qwebchannel.js
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: bridge.ts  ws.ts
frontend/src/lib/components/: PageNav.svelte  PdfViewer.svelte
frontend/src/lib/components/blocks/: Sidebar.svelte  TopBar.svelte
frontend/src/lib/components/ui/badge/: badge.svelte  index.ts
frontend/src/lib/state/: theme.svelte.ts
middlend/: contract.ts
